--- a/train.ipynb
+++ b/train.ipynb
@@ -2,7 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
+   "id": "5f04506d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'music-instrument-classification'...\n",
+      "remote: Enumerating objects: 5521, done.\u001b[K\n",
+      "remote: Total 5521 (delta 0), reused 0 (delta 0), pack-reused 5521 (from 1)\u001b[K\n",
+      "Receiving objects: 100% (5521/5521), 354.41 MiB | 5.84 MiB/s, done.\n",
+      "Resolving deltas: 100% (127/127), done.\n",
+      "Updating files: 100% (5478/5478), done.\n",
+      "/Users/linfengsheng/Desktop/recovery/MusicalInstrumentClassification/music-instrument-classification/music-instrument-classification\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git clone -b src https://github.com/UncleStrawberryBear/music-instrument-classification.git\n",
+    "%cd music-instrument-classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "6fad624b",
    "metadata": {},
    "outputs": [
@@ -17,12 +42,12 @@
    ],
    "source": [
     "import torchaudio\n",
-    "torchaudio.set_audio_backend(\"ffmpeg\")"
+    "torchaudio.set_audio_backend(\"ffmpeg\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
@@ -31,7 +56,15 @@
     },
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "from torch.utils.data import DataLoader\n",
     "from dataset import AudioInstrumentDataset\n",
@@ -39,7 +72,19 @@
     "import torch.nn as nn\n",
     "import numpy as np\n",
     "from model import CNNInstrumentClassifier\n",
-    "from constants import *"
+    "from constants import *\n",
+    "import os\n",
+    "print(os.path.exists(\"all-samples/guitar/guitar_E5_very-long_forte_normal.mp3\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "1b22d765",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python dataset.py"
    ]
   },
   {
@@ -235,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "c2b7058a3b1eca9d",
    "metadata": {
     "ExecuteTime": {
@@ -249,15 +294,15 @@
      "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
-      "  File \"/Users/linfengsheng/Desktop/recovery/MusicalInstrumentClassification/music-instrument-classification/src_instrument_demo.py\", line 29, in <module>\n",
+      "  File \"/Users/linfengsheng/Desktop/recovery/MusicalInstrumentClassification/music-instrument-classification/music-instrument-classification/src_instrument_demo.py\", line 29, in <module>\n",
       "    waveform, onehot = train_ds[i]  # waveform: [1, seq_len], onehot: [num_classes]\n",
-      "  File \"/Users/linfengsheng/Desktop/recovery/MusicalInstrumentClassification/music-instrument-classification/dataset.py\", line 52, in __getitem__\n",
+      "  File \"/Users/linfengsheng/Desktop/recovery/MusicalInstrumentClassification/music-instrument-classification/music-instrument-classification/dataset.py\", line 52, in __getitem__\n",
       "    waveform, sr = torchaudio.load(audio_path)\n",
       "  File \"/Users/linfengsheng/anaconda3/envs/music-clean/lib/python3.10/site-packages/torchaudio/_backend/utils.py\", line 204, in load\n",
       "    backend = dispatcher(uri, format, backend)\n",
       "  File \"/Users/linfengsheng/anaconda3/envs/music-clean/lib/python3.10/site-packages/torchaudio/_backend/utils.py\", line 116, in dispatcher\n",
       "    raise RuntimeError(f\"Couldn't find appropriate backend to handle uri {uri} and format {format}.\")\n",
-      "RuntimeError: Couldn't find appropriate backend to handle uri all-samples/guitar/guitar_E5_very-long_forte_normal.mp3 and format None.\n"
+      "RuntimeError: Couldn't find appropriate backend to handle uri all-samples/saxophone/saxophone_Ds4_05_fortissimo_normal.mp3 and format None.\n"
      ]
     }
    ],
@@ -267,11 +312,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "e2074d8cfb9ff7c1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Metadata saved to train_metadata.csv with 2844 entries.\n",
+      "Metadata saved to test_metadata.csv with 1221 entries.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python metadata.py"
+   ]
   }
  ],
  "metadata": {
